<resources>
    <string name="app_name">SafeHomeSearch</string>
    <string name="app_title">Safe Home Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="positives_title">Pros</string>
    <string name="negatives_title">Cons</string>
    <string name="user_reviews_title">User Reviews</string>
    <string name="powered_by">Powered By:</string>
    <string name="liberty_mutual">Liberty Mutual</string>
    <string name="mongo_db">Mongo DB</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae risus semper, molestie tellus vitae, vehicula nisi. Vestibulum sagittis lectus augue, at venenatis eros blandit id. Suspendisse convallis mi ut posuere rhoncus. Donec ac hendrerit arcu. Vestibulum non lacinia mauris, nec ultricies urna. Praesent sodales libero quis quam volutpat, dapibus convallis lectus condimentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis gravida id metus sit amet pretium. Aenean quam libero, posuere vitae libero mattis, rutrum condimentum ipsum</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="safety_text">Ensure safety before renting, buying or staying for a few nights in a neighbourhood</string>
    <string name="weigh_text">Weigh Pros and Cons before you move into a neighbourhood</string>
    <string name="review_text"> Submit review and photos for places</string>
    <string name="search_text">Enter zip code/address to find safety score</string>
    <string name="facebook_app_id">295454931289613</string>
    <string name="fb_login_protocol_scheme">fb295454931289613</string>
</resources>
